--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">Twibook</string>
     <string name="title_activity_home">HomeActivity</string>
     <string name="title_activity_create_article">CreateArticleActivity</string>
+
+
+    <string name="TitreArticle">Création d\'articles</string>
+    <string name="Titre">Titre</string>
+    <string name="Description">Description</string>
+    <string name="Post">Post</string>
 </resources>
