--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
     <string name="app_name">Twibook</string>
     <string name="title_activity_home">HomeActivity</string>
     <string name="title_activity_create_article">CreateArticleActivity</string>
+    <string name="Twibook">Twibook</string>
+
+
     <string name="zoneCommentaire">Tapez votre commentaire</string>
     <string name="boutonComentaire">Commenter</string>
 
